# UAV_Zugspitze

./: .gitignore  README.md  ROADMAP  pyproject.toml  snow_depth_model.py  snow_topo_analysis.py  snow_topo_analysis_dev.py  svg_to_pdf.py  topo_indices.py  uas_lidar.ipynb  uas_ortho.ipynb
Poster_UAV/: library.bib  main.tex  preposterTikz.sty
Poster_UAV/Figures/: library.bib  workflow_diagram_update.afpub
Poster_UAV/Figures/analysis_hbbr_new/: plot_chunk_table.py  snow_topo_chunk_summary.csv  snow_topo_global_vs_chunked.csv  snow_topo_summary.csv
Poster_UAV/Figures/analysis_hbbr_new/chunks/chunk_00/: chunk_00_summary.csv
Poster_UAV/Figures/analysis_hbbr_new/chunks/chunk_01/: chunk_01_summary.csv
Poster_UAV/Figures/analysis_hbbr_new/chunks/chunk_04/: chunk_04_summary.csv
Poster_UAV/Figures/analysis_hbbr_new/chunks/chunk_05/: chunk_05_summary.csv
Poster_UAV/Figures/analysis_hbbr_new/chunks/chunk_06/: chunk_06_summary.csv
Poster_UAV/Figures/analysis_hbbr_new/chunks/chunk_07/: chunk_07_summary.csv
Poster_UAV/Figures/analysis_hgbr/: chunk_boundaries.gpkg  snow_topo_chunk_summary.csv  snow_topo_global_vs_chunked.csv
Poster_UAV/Sections/: Conclusions.tex  Methodology.tex  Objectives.tex  References.tex  Results.tex  Results_fig1_global.tex  Results_fig2_chunk_importance.tex  Results_fig3_chunk_table.tex  Results_fig4_scatter.tex  Results_fig5_partial_dep.tex  Summary.tex  Supporters.tex
adobe/: tpi_pard.ai  tpi_scatter.ai  wi_e_pard.ai  wi_e_scatter.ai
hpc/: submit_indices.sh  submit_topo_analysis.sh
info/: Indices  ROADMAP  Regression Metrics  info.md
(+7 files in other folders)
