[project]
name = "zugspitze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",
    "whitebox-workflows>=1.3.5",
]
