[project]
name = "zugspitze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",
    "whitebox>=2.3.6",
    "whitebox-workflows>=1.3.5",
]

[project.scripts]
topo_analysis = "snow_topo_analysis:main"
topo_indices = "topo_indices:main"

[tool.setuptools]
py-modules = ["snow_topo_analysis", "topo_indices", "snow_depth_model"]

[tool.uv]
package = true
